# claude

./: .gitignore  claude_notes.txt
.mcp/: pyvenv.cfg
cost_reports/: account_summary_20241211_205236.csv  cost_anomalies_20241211_205236.csv  daily_trends_20241211_205236.csv  service_costs_20241211_205236.csv  service_summary_20241211_205236.csv  summary_report_20241211_205236.txt
servers/src/mcp-snowflake-service-main/: .env.template  .gitignore  LICENSE  README.md  __init__.py  pyproject.toml  server.py
